# MediaAction

./: build.gradle  config_ext.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/henry/mediaaction/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/henry/mediaaction/: MainActivity.java  VideoListActivity.java  WelcomeActivity.java
app/src/main/java/com/henry/mediaaction/activity/: MusicActivity.java  MusicPlayerActivity.java  VideoActivity.java
app/src/main/java/com/henry/mediaaction/adapter/: MyMusicAdapter.java
app/src/main/java/com/henry/mediaaction/arouter/: ARouterPath.java
app/src/main/java/com/henry/mediaaction/base/: BaseActivityManager.java  BaseApplication.java  BaseCache.java  BaseConstant.java  BaseModelInter.java  BaseObserver.java  BasePresenter.java  BaseResponse.java  BaseViewInter.java  MvpBaseActivity.java  RxEvent.java
app/src/main/java/com/henry/mediaaction/base/recycle/: BaseRecycleAdapter.java  BaseRecycleItemClick.java  BaseRecycleViewHolder.java
app/src/main/java/com/henry/mediaaction/bean/: MusicBean.java
app/src/main/java/com/henry/mediaaction/cache/: MMKVCache.java
app/src/main/java/com/henry/mediaaction/manager/: ActivityManagerLifecycle.java  AppThreadExecutor.java
app/src/main/java/com/henry/mediaaction/net/: HttpApiService.java  NetWorkClient.java
app/src/main/java/com/henry/mediaaction/present/: MusicPresenter.java
app/src/main/java/com/henry/mediaaction/progress/: AnnularView.java  BackgroundLayout.java  BarView.java  Determinate.java  Helper.java  Indeterminate.java  KProgressHUD.java  LoadingView.java  PieView.java  SpinView.java
app/src/main/java/com/henry/mediaaction/utils/: Config.java  DisplayUtils.java  Logger.java  NetUtils.java  RetrofitUtils.java  RomUtils.java  StatusBarUtils.java  SystemBarTintManager.java
app/src/main/java/com/henry/mediaaction/view/: StateBar.java
app/src/main/res/drawable/: progress_round.xml
app/src/main/res/layout/: activity_main.xml  activity_music.xml  activity_music_palyer.xml  activity_video.xml  activity_welcome.xml  item_music_activity.xml  kprogresshud_hud.xml  top_header.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/henry/mediaaction/: ExampleUnitTest.java
audio/: build.gradle
audio/src/androidTest/java/com/henry/audio/: ExampleInstrumentedTest.java
audio/src/main/: AndroidManifest.xml
audio/src/main/cpp/: AudioBean.cpp  AudioBean.h  CMakeLists.txt  FFAudio.cpp  FFAudio.h  FFDecode.cpp  FFDecode.h  FFLog.h  FFPlayStatus.cpp  FFPlayStatus.h  FFQueue.cpp  FFQueue.h  FFUnPacking.cpp  FFUnPacking.h  JavaListener.cpp  JavaListener.h  audio.cpp
audio/src/main/java/com/henry/audio/: NativeLib.java  OnCallPrepared.java  OnErrorListener.java
audio/src/test/java/com/henry/audio/: ExampleUnitTest.java
